@@ -15,14 +15,14 @@ not run its Makefile.PL or Build.PL.
 Hash: SHA1
 
 SHA1 a1f1d96a3a394a48439f7ae39269bb8bac1931d6 Build.PL
-SHA1 06d0046ab172991b2a8fa9299e003fc4f5596ebe Changes
+SHA1 1e4ac30d551888059b36429d469f604d596f9d50 Changes
 SHA1 7f789ca26fa5b54f44cfa70008cdfe571dcea13b MANIFEST
 SHA1 63ed48fa5b27e3248bae4db80c5a18f420bdb1a7 MANIFEST.SKIP
-SHA1 30deda7c8b492ff0ff2fb126c6027a3f66237256 META.yml
+SHA1 e855265fde401ba700d86bcd54d3e0a4d54fd11d META.yml
 SHA1 48c575cb937d7560609e826bdc75c316ba03f1ac examples/iso_date_example.t
 SHA1 4f45476c2016eb1dfa44524757c0e51597541dc2 examples/strip_ws.t
-SHA1 c7b9e398a6d0646f28dd1f7adb5995c0a13cfd9e lib/Method/Signatures.pm
-SHA1 7d6c1730200fe5347203798c41284cf4a3f3e0b1 lib/Method/Signatures/Parser.pm
+SHA1 dd8b1a561dec1fa6e8f5570521c1948f0f4c3f11 lib/Method/Signatures.pm
+SHA1 5d783ad246dc30367de7536a26736c513e445a52 lib/Method/Signatures/Parser.pm
 SHA1 ac6687796e415550e211d720f4b7cfb6d2d09713 t/alias.t
 SHA1 e33a7883ed81c0d510f705d92e5865249ef49a72 t/anon.t
 SHA1 048a9685c82bc65e29a87729f9d49125995172d4 t/array_param.t
@@ -50,9 +50,9 @@ SHA1 87553506868f050224f996204e1384249690c7d4 t/simple.plx
 SHA1 14fca7ab52397d29feeda54fc5b6efe1beec2488 t/split_proto.t
 SHA1 34bffb52545b96e498169bf81076206714dc82f0 t/traits.t
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.9 (Darwin)
+Version: GnuPG/MacGPG2 v2.0.11 (Darwin)
 
-iEYEARECAAYFAkkGxVIACgkQWMohlhD1Qyc5VwCg0tr2ZatZ+voWUBNHdX+Chhh7
-3ucAniAbM5R5jDw+gpUTMAvvMNkFvqvl
-=OJDb
+iEYEARECAAYFAko8ngoACgkQWMohlhD1QycJAQCdEQ28fEc6tT3nvI0DDBsSWAZ+
+/ewAoNASFo067L4f3sCalTBsvrFcsqki
+=Tsfq
 -----END PGP SIGNATURE-----
