@@ -1,3 +1,12 @@
+20090620  Sat Jun 20 01:26:59 PDT 2009
+    Performance
+    * Load PPI on demand to reduce load time (needed by perl5i)
+
+    Other
+    * Separated signature translation between methods and subroutines
+      (needed by perl5i)
+
+
 20081028  Tue Oct 28 00:45:48 PDT 2008
     New Features
     * Two or more slurpy parameters (ie. @foo or %bar) in a signature is
